<resources>
    <string name="app_name">My Favorite Film</string>
    <string name="template_movie_title">Arrow</string>
    <string name="template_movie_release_date">April 27, 2018</string>
    <string name="template_movie_desc">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy…</string>

    <string name="template_genre_text">Action</string>
    <string name="template_score_text">8.3</string>

    <string name="star_icon_text_desc">star icon</string>
    <string name="background_desc">background</string>
</resources>
