<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:drawable/dialog_holo_dark_frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/favorite_item_title"
        style="@style/common_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:text="@string/template_movie_title"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/favorite_release_date"
        style="@style/common_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:text="@string/template_movie_release_date"
        app:layout_constraintTop_toBottomOf="@id/favorite_item_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/favorite_genre_text"
        style="@style/common_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favorite_release_date"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/template_genre_text"
        android:textSize="@dimen/small_text_size"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/favorite_desc_text"
        style="@style/common_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favorite_genre_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/template_movie_desc"
        android:textSize="@dimen/small_text_size"
        />

    <LinearLayout
        android:id="@+id/rating_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border_white"
        android:contentDescription="@string/background_desc"
        android:gravity="center"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favorite_desc_text"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/star_icon_text_desc"
            android:layout_marginTop="@dimen/x_small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginBottom="@dimen/x_small_margin"
            app:srcCompat="@drawable/star"
            />
        <TextView
            android:id="@+id/favorite_item_score_text_view"
            style="@style/common_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x_small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginBottom="@dimen/x_small_margin"
            android:text="@string/template_score_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border_white"
        android:contentDescription="@string/background_desc"
        android:gravity="center"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginStart="@dimen/medium_margin"
        app:layout_constraintLeft_toRightOf="@id/rating_container"
        app:layout_constraintTop_toBottomOf="@id/favorite_desc_text"
        >
        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/star_icon_text_desc"
            android:layout_marginTop="@dimen/x_small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginBottom="@dimen/x_small_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/favorite_desc_text"
            app:srcCompat="@drawable/baseline_access_time_white_24"
            />
        <TextView
            android:id="@+id/favorite_item_duration_text_view"
            style="@style/common_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x_small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginBottom="@dimen/x_small_margin"
            android:text="@string/template_score_text"
            />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>